--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+<link rel="stylesheet" href="Users/Chris/Desktop/Projects/run-buddy/assests/css/style.css">
+</head>
     <header>
         <h1>RUN BUDDY</h1>
         <nav><!-- Unordered list element -->
