--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="Users/Chris/Desktop/Projects/run-buddy/assests/css/style.css">
+  <link rel="stylesheet" href=".\assets\css\style.css">
 </head>
-    <header>
-        <h1>RUN BUDDY</h1>
-        <nav><!-- Unordered list element -->
+  <header>
+    <h1>RUN BUDDY</h1>
+      <nav>
+      <!-- Unordered list element -->
             <ul>
               <!-- List item element-->
               <li>
@@ -23,7 +24,7 @@
               </li>
             </ul>
         </nav>
-      </header>
+  </header>
       
       <!-- hero/jumbotron -->
       <section>
@@ -52,5 +53,9 @@
       <!-- footer -->
       <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
+        <div>
+          <a href="#">Read Our Privacy Policy</a><br />
+          &copy; 2019 Run Buddy, Inc.
+        </div>
       </footer>
 </html>
